# mcp_jenkins

./: README.md  mcp_jenkins_deploy_test_environment  pyproject.toml
docker/: Dockerfile  build  deploy.test.environment  run.client  run.server  run.tests
open-webui/: open_webui_interface.py
src/jenkins_mcp_server/: chat_interface.py  main.py  requirements.txt  run_client.py  run_docker_build.py  run_docker_tests.py
src/jenkins_mcp_server/docker/: Dockerfile  build  run  run.client  run.server.tests
src/jenkins_mcp_server/tests/functional/: test_server.py
src/mcp_jenkins/: client.py  functions_schema.md  run_client.py  run_deploy_test_environment.py  run_docker_build.py  run_docker_tests.py  run_server.py  server.py
src/mcp_jenkins.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mcp_jenkins/docker/: Dockerfile  build  run  run.client  run.server.tests
tests/: test_e2e.py  test_server.py
