[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_jenkins"
version = "0.1.0"
description = "A Jenkins MCP server"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
[project.entry-points.console_scripts]
mcp_jenkins_server = "jenkins_mcp_server.run_server:main"
mcp_jenkins_client = "jenkins_mcp_server.run_client:main"

[tool.setuptools.packages]
find = { where = ["src"] }
