[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_jenkins"
version = "0.2.0"
description = "A Jenkins MCP server"
authors = [
    { name = "Andrei Matveyeu", email = "andrei@ideabulbs.com" }
]
[project.entry-points.console_scripts]
mcp_jenkins_server = "mcp_jenkins.run_server:main"
mcp_jenkins_client = "mcp_jenkins.run_client:main"

[tool.setuptools.packages]
find = { where = ["src"] }
